# pnc-checklist

./: .gitignore  README.md  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  schemadata.json  tsconfig.json  v  vite.config.ts
__tests__/: DollList.jest.tsx  Dolls.jest.tsx
app/: globals.css  layout.tsx  nav-bar.tsx  page.module.css  page.tsx  providers.tsx
app/dolls/: page.tsx
app/resources/: page.tsx
app/settings/: page.tsx
components/: Alert.tsx  ClassFilter.tsx  ClassSelect.tsx  Common.ts  Common.tsx  DollList.tsx  DollListItem.tsx  DollProfile.tsx  Error.tsx  Layout.tsx  Loading.tsx  Loadout.tsx  MainStatSelect.tsx  MainstatSelect.tsx  Navbar.tsx  RadixDropdown.tsx  RadixSelect.tsx  Select.tsx  StatusBar.tsx  Switch.tsx
components/Algorithm/: AlgoImage.tsx  AlgorithmPiece.tsx  AlgorithmSet.tsx  Common.ts  PieceModal.tsx  RadixSlot.tsx  SlotCheckbox.tsx
components/Dashboard/: ResetCalendar.tsx  Timetable.tsx  TodayAlgo.tsx  index.tsx
components/Doll/: DollList.tsx  DollListItem.tsx  (+4 more)
doc/: index.norg
interfaces/: datamodel.ts  index.ts  payloads.ts  requirement.ts  results.ts
nextjs/: jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json_backup
pages/: _app.tsx  _document.tsx  about.tsx  algo.tsx  dev.tsx  dolls.tsx  index.tsx  index_backup.tsx  inventory.tsx  resources.tsx  settings.tsx  summary.tsx
schemas/: schema.jsonc
src/: index.tsx  rspc.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  endpoint.json  enppoint.json  schemadata.json  schemalessdata.json  tauri.conf.json
src-tauri/bindings/: ENUM_TABLE.ts  invoke_keys.ts  rspc.ts
src-tauri/bindings/enums/: AlgoCategory.ts  AlgoMainStat.ts  AlgoSubStat.ts  Algorithm.ts  AllEnums.ts  Bonus.ts  Class.ts  Day.ts  LoadoutType.ts  NeuralExpansion.ts  SlotPlacement.ts  index.ts
src-tauri/bindings/structs/: AlgoPiece.ts  AlgoSet.ts  AlgoSlot.ts  AlgoTypeDb.ts  AlgorithmRequirement.ts  Coin.ts  Database.ts  Exp.ts  GrandResource.ts  Keychain.ts  KeychainTable.ts  Level.ts  LevelRequirement.ts  Loadout.ts  Locker.ts  NeuralFragment.ts  NeuralResourceRequirement.ts  ResourceByDay.ts  SkillCurrency.ts  SkillResourceRequirement.ts  Slot.ts  Unit.ts  UnitSkill.ts  UserJSON.ts  UserStore.ts  WidgetResource.ts  WidgetResourceRequirement.ts  index.ts
src-tauri/data/game/: algo_type.jsonc  timetable.jsonc
src-tauri/data/user/: schemadata.json  schemadata.yaml  schemalessdata.json
src-tauri/prisma/: dev.db  dev.db-journal  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/schemas/: schema.json  schema.jsonc
src-tauri/src/: consts.rs  macros.rs  main.rs  startup.rs  state.rs  traits.rs
src-tauri/src/algorithm/: bacon.rs  impls.rs  mod.rs  types.rs
src-tauri/src/api/: algopiece.rs  builder.rs  enums.rs  loadout.rs  mod.rs  requirement.rs  slot.rs  unit.rs  unitskill.rs
src-tauri/src/api/crud/: algo.rs  mod.rs  slot.rs  unit.rs  unit_skill.rs
src-tauri/src/compute/: algo.rs  impls.rs  mod.rs
src-tauri/src/database/: mod.rs  preload.rs
src-tauri/src/impls/: default.rs  display.rs  mod.rs
src-tauri/src/loadout/: impls.rs  mod.rs  types.rs
src-tauri/src/model/: builder.rs  cmdbindings.rs  enums.rs  error.rs  impls.rs  infomodel.rs  mod.rs  structs.rs  tables.rs  validate.rs
src-tauri/src/parser/: calc.rs  file.rs  mod.rs  parse.rs  requirement.rs
src-tauri/src/requirement/: bacon.rs  impls.rs  mod.rs  types.rs
src-tauri/src/service/: bacon.rs  databinding.rs  db.rs  errors.rs  file.rs  mod.rs
src-tauri/src/state/: build_inject.rs  impls.rs  mod.rs  runnables.rs  types.rs  worker.rs
src-tauri/src/stats/: impls.rs  types.rs
src-tauri/src/table/: consts.rs  impls.rs  mod.rs  types.rs
src-tauri/src/unit/: bacon.rs  impls.rs  mod.rs  types.rs
src-tauri/src/validate/: algo.rs  bacon.rs  mod.rs  unit.rs
src-tauri/src/validator/: algo.rs  bacon.rs  inputs.rs  mod.rs  unit.rs
src-tauri/src/worker/: build_inject.rs  mod.rs
styles/: Home.module.css  ItemPlate.module.css  Page.module.css  alert.css  colors.css  globals.css  named.css  radix.css  togglegroup.css
utils/: constants.ts  defaults.ts  helper.ts  lang.ts  queryHooks.ts  rspc.ts
(+115 files in other folders)
