[package]
name = "pnc-checklist"
version = "0.1.32"
description = "PNC Checklist App"
authors = ["Othi"]
license = ""
repository = "https://github.com/mnpqraven/pnc-checklist"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = {version = "1.0", features = ["std"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2", features = ["api-all", "updater"] }
ts-rs = "6.2.1"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
semver = { version = "1.0.16", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.1"
schemars = { version = "0.8.11", features = ["preserve_order"] }
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.25.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
